# Robot-Programming-with-ROS

./: README.md
grasp_it/: CMakeLists.txt  package.xml
grasp_it/src/: grasp.cpp
soft_hand_description/model/: soft_hand.gazebo.xacro
trajectory_planner/: CMakeLists.txt  package.xml
trajectory_planner/src/: trajectory_planner.cpp
ur5_moveit/: CMakeLists.txt  package.xml
ur5_moveit/config/: controllers.yaml  ur5_soft_hand.srdf
ur5_moveit/launch/: move_group.launch  moveit_rviz.launch  planning_context.launch  trajectory_execution.launch.xml  ur5_moveit.rviz  ur5_moveit_planning_execution.launch
ur5_plan_grasp/: CMakeLists.txt  package.xml
ur5_plan_grasp/config/: joint_names.yaml
ur5_plan_grasp/controller/: arm_controller_ur5.yaml
ur5_plan_grasp/launch/: controller_utils.launch  grasp.launch  planning_trajectory.launch  trajectory_planner.launch  ur5_sim.launch  ur5_upload.launch  ur5_world.launch  vision.launch
ur5_plan_grasp/meshes/collision/: collision_new_ft_sensor.stl
ur5_plan_grasp/src/: spawn_object
ur5_plan_grasp/urdf/: kinect_camera_gazebo.xacro  kinect_camera_macro.xacro  model.sdf  opto_ft_interface_gazebo.xacro  opto_ft_interface_macro.xacro  plugin.gazebo.xacro  ur.transmission.xacro  ur5.urdf.xacro  ur5_robot.urdf.xacro
vision/: CMakeLists.txt  package.xml
vision/launch/: filter.launch
vision/src/: depth_vision.cpp
