<?xml version="1.0"?>
<package>
  <name>trajectory_planner</name>
  <version>2.0.1</version>
  <description>MoveIt! UR5 robot</description>

  <author email="enrico@enrico.it">enrico</author>
  <maintainer email="enrico@enrico.it">enrico</maintainer>
  <license>Modified BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
