<?xml version="1.0"?>
<package format="2">
  <name>ur5_plan_grasp</name>
  <version>0.0.0</version>
  <description>The ur5_plan_grasp package</description>

  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="enrico.turco@iit.it">enrico</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>trajectory_planner</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>trajectory_planner</build_export_depend>
  <build_export_depend>moveit_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>trajectory_planner</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
